--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -40,7 +40,8 @@ main {
   width: 50rem;
 
   border: 0.2rem solid rgba(1, 39, 88, 0.1);
-  background-color: rgba(192, 192, 192, 0.6);
+  // background-color: rgba(192, 192, 192, 0.6);
+  background-color: black;
 }
 
 .keyboard__row {
@@ -65,20 +66,27 @@ main {
   margin: 0 0.15rem;
 
   font-size: 1.4rem;
-  color: rgba(255, 255, 255, 0.85);
+  font-weight: 400;
+  color:#fff;
 
   cursor: pointer;
-  background-color: black;
+  background-color: #333333;
 
 
   .sub {
     font-size: 1.1rem;
     text-align: left;
-    color:  rgba(255, 255, 255, 0.6);;
+    color: #7a7a7a;
   }
   .letter {
     text-align: center;
     vertical-align: middle;
+  }
+  .sub-active {
+
+  }
+  .sub-inactive {
+
   }
 }
 
@@ -89,15 +97,15 @@ main {
   }
 } 
 
-
 [data-code="ControlRight"], 
 [data-code="Tab"],
-[data-code="ControlLeft"] {
+[data-code="ControlLeft"],
+[data-code*="Alt"]  {
   grid-column: auto / span 3;
 }
 
 [data-code="Enter"],
-[data-code="Delete"]  {
+[data-code="Delete"] {
   grid-column: auto / span 4;
 }
 
