--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -88,6 +88,9 @@ main {
   .sub-inactive {
 
   }
+  &.active {
+    background-color: green;
+  }
 }
 
 [data-code*="Digit"] {
@@ -100,12 +103,15 @@ main {
 [data-code="ControlRight"], 
 [data-code="Tab"],
 [data-code="ControlLeft"],
-[data-code*="Alt"]  {
+[data-code*="Alt"],
+[data-code="Clear"]  {
   grid-column: auto / span 3;
 }
 
 [data-code="Enter"],
-[data-code="Delete"] {
+[data-code="Delete"],
+[data-code="Lang"],
+[data-code="Mic"] {
   grid-column: auto / span 4;
 }
 
@@ -118,8 +124,13 @@ main {
   grid-column: auto / span 6;
 }
 
-[data-code="Backspace"] {
+[data-code="Backspace"]{
   grid-column: auto / span 7;
+}
+
+[data-code="BackgroundSound"],
+[data-code*="Sound"] {
+  grid-column: auto / span 10;
 }
 
 [data-code="Space"] {
