--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -13,9 +13,11 @@ html {
 }
 
 body {
+  position: relative;
   background: #1c2646;
-  overflow-y: hidden;
+  height: 680px;
   min-width: 500px;
+  overflow-y: hidden;
 }
 
 main {
@@ -28,29 +30,32 @@ main {
           flex-direction: column;
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   max-width: 50rem;
   margin: auto;
+  overflow-y: hidden;
+  height: 100%;
 }
 
 .title {
+  margin-top: 1rem;
   color: #fff;
   text-align: center;
 }
 
 .btn-open {
-  width: 10rem;
-  height: 10rem;
-  padding: 2.5rem 0;
-  margin: 1rem;
-  font-size: 2rem;
+  width: 100px;
+  height: 100px;
+  padding: 25px 0;
+  margin: 10px;
+  font-size: 20px;
   font-weight: 700;
-  line-height: 2rem;
+  line-height: 20px;
   vertical-align: middle;
   text-align: center;
   color: #333333;
@@ -78,13 +83,16 @@ main {
 
 .output {
   width: 50rem;
-  height: 40vh;
+  height: calc(100% - 350px);
   padding: 1rem;
   border: 0.8rem solid;
+  font-size: 1.4rem;
   resize: none;
 }
 
 .keyboard {
+  position: absolute;
+  bottom: 0;
   opacity: 1;
   display: -ms-grid;
   display: grid;
@@ -219,5 +227,65 @@ main {
 [data-code*="Close"]:hover {
   background-color: red;
   color: black;
+}
+
+@media (min-width: 600px) {
+  body {
+    height: 702px;
+  }
+  html {
+    font-size: 11px;
+  }
+  main {
+    max-width: 600px;
+  }
+  .output {
+    height: calc(100% - 375px);
+  }
+}
+
+@media (min-width: 750px) {
+  body {
+    height: 730px;
+  }
+  html {
+    font-size: 12px;
+  }
+  main {
+    max-width: 750px;
+  }
+  .output {
+    height: calc(100% - 400px);
+  }
+}
+
+@media (min-width: 860px) {
+  body {
+    height: 772px;
+  }
+  html {
+    font-size: 14px;
+  }
+  main {
+    max-width: 860px;
+  }
+  .output {
+    height: calc(100% - 445px);
+  }
+}
+
+@media (min-width: 1024px) {
+  body {
+    height: 820px;
+  }
+  html {
+    font-size: 16px;
+  }
+  main {
+    max-width: 1000px;
+  }
+  .output {
+    height: calc(100% - 490px);
+  }
 }
 /*# sourceMappingURL=style.css.map */
